--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -27,5 +27,6 @@
   \acro{NSP}[NSP]{Next Sentence Prediction}
   \acro{BGE}[BGE]{BAAI General Embeddings}
   \acro{GTE}[GTE]{General Text Embedding}
+  \acro{LLM}[LLM]{Large Language Model}
 \end{acronym}
 
