--- a/src/literature_review.tex
+++ b/src/literature_review.tex
@@ -77,20 +77,34 @@ Transformer models effectiveness is validated by state-of-the-art performance ac
 Finally, \ac{BERT}'s robustness allows it to handle nuances in text without significant performance degradation.
 
 \section{Retrieval Augmented Generation}
+\ac{RAG} is an advanced \ac{NLP} framework that combines the strengths of retrieval-based and generation-based models to produce high-quality, contextually relevant text based on provided document (web-page etc.), instruction and query (question). 
+
+
+\subsection{Architecture of RAG}
+
 The \ac{RAG} \cite{lewis2021retrievalaugmented} algorithm leverages a two-stage approach for answer generation: retrieval and generation.
 Both stages rely heavily on the chosen text representation technique.
 
 \begin{itemize}
-  \item \textbf{Retrieval}: The algorithm retrieves relevant passages from a technical document (e.g., manual) that address the user's question. To achieve this, RAG represents both the question and potential answer passages using the same text representation model (e.g., word embeddings, sentence embeddings). The similarity between the question and passage representations determines the relevance of a passage for answering the question.  
-  \item \textbf{Generation}: Once retrieved, the passages serve as input for the generation model, which constructs a natural language answer. The quality of the text representation in these retrieved passages is crucial. Rich representations that capture semantic relationships and context allow the generation model to create informative and well-structured answers.  
+  \item \textbf{Retrieval}:
+    In the initial phase, the algorithm extracts relevant information from the document and splits it into manageable chunks.
+    These chunks are then fed into text representation models, which convert them into a format suitable for efficient retrieval.
+    This process results in encoded representations of the information, which are then stored within a vector database.
+    During the retrieval phase, \ac{RAG} utilizes the same text representation model to encode the user's query (question).
+    Subsequently, it searches the vector database and identifies the top-$K$ most relevant passages based on their encoded representations.
+  \item \textbf{Generation}:
+    The $K$ retrieved passages identified in the information retrieval phase serve as crucial contextual information for the \ac{LLM} within the \ac{RAG} system.
+    By providing this context alongside the user's question and any additional instructions, the \ac{LLM} is empowered to generate a comprehensive and informative answer.
 \end{itemize}
+
+Architecture of the \ac{RAG} algorithm is shown on the \reffig{fig:RAG_scheme}
 
 \begin{figure}[h]
   \centering
   \input{src/fig/tikz/RAG_scheme.tex}
-  \caption{\ac{RAG} scheme}
+  \caption{Retrieval-Augmented Generation architecture.}
   \label{fig:RAG_scheme}
-\end{figure} 
+\end{figure}
 
 
 \section{TODO: REMOVE, STRUCTURE}
