bib: add RAG with different embeddings, RAG with different chunks

--- a/main.bib
+++ b/main.bib
@@ -344,3 +344,19 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+% RAG with different embeddings
+@misc{joshi2024RAGemb,
+      title = {RAG Series Part 1: How to Choose the Right Embedding Model for Your Application},
+      author = {Apoorva Joshi},
+      year={2024},
+      url = {https://www.mongodb.com/developer/products/atlas/choose-embedding-model-rag/}
+}
+
+% RAG with different chunks
+@article{theja2023RAGchunk,
+        title = {Evaluating the Ideal Chunk Size for a RAG System using LlamaIndex},
+        author = {Ravi Theja},
+        journal = {LLAMAi},
+        url = {https://www.llamaindex.ai/blog/evaluating-the-ideal-chunk-size-for-a-rag-system-using-llamaindex-6207e5d3fec5},
+}
